--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,7 +1,7 @@
 {
     "@@locale": "ru",
     "welcome_back": "С возвращением в Go Habit",
-    "don't_have_account": "Нет аккаунта? Зарегистрироваться",
+    "dont_have_account": "Нет аккаунта? Зарегистрироваться",
     "registration": "Регистрация",
     "create_account": "Создайте аккаунт в Go Habit",
     "already_have_account": "Уже есть аккаунт? Войти",
@@ -15,14 +15,14 @@
             }
         }
     },
-    "appDescriptionTitle": "Приложение Go Habit поможет вам:",
-    "habitTrackingFeature": "Отслеживайте ваши привычки и серию их выполнения!",
-    "dailyHabitsFeature": "Создавайте и отслеживайте ежедневные привычки для достижения целей",
-    "analyticsFeature": "Анализ прогресса в виде графиков и кубиков!",
-    "visualizationFeature": "Визуализируйте свой прогресс и получайте мотивацию",
-    "remindersFeature": "Получать напоминания и мотивационные фразы!",
-    "notificationsFeature": "Настраивайте уведомления, чтобы не забывать о своих привычках",
-    "widgetsFeature": "Виджеты для ваших привычек прямо на главном экране!",
-    "customWidgetsFeature": "Настраивайте виджеты, которые хотите видеть на главном экране",
-    "startTrackingButton": "Начать отслеживание привычек"
+    "app_description_title": "Приложение Go Habit поможет вам:",
+    "habit_tracking_feature": "Отслеживайте ваши привычки и серию их выполнения!",
+    "daily_habits_feature": "Создавайте и отслеживайте ежедневные привычки для достижения целей",
+    "analytics_feature": "Анализ прогресса в виде графиков и кубиков!",
+    "visualization_feature": "Визуализируйте свой прогресс и получайте мотивацию",
+    "reminders_feature": "Получать напоминания и мотивационные фразы!",
+    "notifications_feature": "Настраивайте уведомления, чтобы не забывать о своих привычках",
+    "widgets_feature": "Виджеты для ваших привычек прямо на главном экране!",
+    "customWidgets_feature": "Настраивайте виджеты, которые хотите видеть на главном экране",
+    "start_tracking_button": "Начать отслеживание привычек"
 }
